--- a/wagyu_price/css/style.css
+++ b/wagyu_price/css/style.css
@@ -48,6 +48,11 @@ p {
   color: #343a40;
 }
 
+.page_title {
+  font-size: 50px;
+  color: #fff;
+}
+
 @media screen and (min-width:576px) {
   #page-top {
   display:none;
